hero section is now done

--- a/index.html
+++ b/index.html
@@ -56,19 +56,21 @@
               </div>
               <div class="right-box">
                <div class="bio-box">
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, obcaecati.</p>
+                   <h2>Hi I’m Samiyah</h2>
+                   <h3>Educator, Speaker and Luxury Real Estate Specialist</h3>
+                   <p>I teach realtors the effective practices and skills to grow their real estate businesses so they can sell more, earn a better living, and stop chasing the next sale. </p>
                </div>
                 <div class="text-box">
-                   <div class="box-1">
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, exercitationem?</p>
-                   </div>
-                   <div class="box-2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, exercitationem?</p>
-                   </div>
+                  <div class="box-1">
+                    <p>I am Samiyah Jackson, a premier Realtor servicing northern New Jersey. I have a knack for tapping into the needs and desires of my house-hunting clients and merging them into their ideal home. I love seeing my clients light up when they discover the perfect property to build their life in.</p>
+                    <a href="" class="button">Book Now</a>
+                  </div>
                 </div>
             </div>
           </div>
     </section>
+
+   
 
        
 
