--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samiyah real estate website</title>
+    <title>Welcome to Samiyah Jackson.Com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">   
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
@@ -26,23 +29,13 @@
                         <a class="nav-link active" aria-current="page" href="#">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Properties</a>
+                        <a class="nav-link" href="http://www.eliteintriagohomes.com/Listings/homes-for-sale-union-nj/all-locations/min-price-any/max-price-any/beds-any/baths-any/1" target="_blank">Properties</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Search MLS</a>
+                        <a class="nav-link" href="https://www2.gsmls.com/publicsite/getcountysearch.do?method=getcountysearch&bundle=publicsite.English" target="_blank">MLS Search</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
-                      </li>
-                      <div class="divider"></div>
-                      <li class="social-item">
-                        <a class="social-link-facebook" href="#"><i class="fab fa-facebook-f"></i></a>
-                      </li>
-                      <li class="social-item">
-                        <a class="social-link-facebook" href="#"><i class="fab fa-instagram"></i></a>
-                      </li>
-                      <li class="social-item">
-                        <a class="social-link-facebook" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="nav-link" href="#Contact">Contact Us</a>
                       </li>
                     </ul>
                   </div>
@@ -70,11 +63,121 @@
           </div>
     </section>
 
+    <section id="featured-properties">
+      <div class="property-box">
+        <div class="img-box">
+          <img src="/Images/house2-miyah.jpg" alt="house">
+        </div>
+        <div class="text-box">
+          <div class="box-1">
+            <h2>Featured Properties</h2>
+            <h3>721 Westfield Ave
+              Elizabeth, NJ 07208</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <ul class="icons">
+              <li><img src="/Images/home.png" alt=""></li>
+
+              <li><img src="/Images/private-garage.png" alt=""></li>
+
+              <li><img src="/Images/toilet.png" alt=""></li>
+            </ul>
+             <a href="http://www.eliteintriagohomes.com/Listings/homes-for-sale-union-nj/all-locations/min-price-any/max-price-any/beds-any/baths-any/1" class="button">Search Properties</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="MLS-Search">
+      <div class="MLS-box">
+        <h2>MLS Search</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+           Dicta consequatur veritatis consectetur hic ipsa explicabo 
+           voluptates repellendus praesentium dolor quod? 
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+           Libero vel soluta possimus rerum illum repellendus! 
+           Culpa eum doloremque qui corporis!</p>
+        <a href="" class="button">Book Now</a>
+      </div>
+    </section>
+
+    <section id="Testimonials">
+      <div class="container">
+        <div class="title-box">
+          <h2>Testimonials</h2>
+        </div>
+       <!-- Swiper -->
+      <div class="swiper-container">
+       <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <p>"Lorem Ipsum is simply dummy text of the printing and typesetting centuries. Lorem Ipsum is 
+              simply dummy text of the printing and typesetting centuries. Lorem Ipsum is simply dummy text of the printing and typesetting centuries. Lorem Ipsum is 
+              simply dummy text of the printing and typesetting centuries"</p>
+          </div>
+          <div class="swiper-slide"><p>"Lorem Ipsum is simply dummy text of the printing and typesetting centuries. Lorem Ipsum is 
+            simply dummy text of the printing and typesetting centuries. Lorem Ipsum is simply dummy text of the printing and typesetting centuries. Lorem Ipsum is 
+            simply dummy text of the printing and typesetting centuries"</p></div>
+          <div class="swiper-slide"><p>"Lorem Ipsum is simply dummy text of the printing and typesetting centuries. Lorem Ipsum is 
+            simply dummy text of the printing and typesetting centuries. Lorem Ipsum is simply dummy text of the printing and typesetting centuries. Lorem Ipsum is 
+            simply dummy text of the printing and typesetting centuries"</p></div>
+     </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+ </div>
+</section>
+
+  <section id="contact">
+    <div class="container">
+      <div class="title-box">
+        <h2>Contact US</h2>
+      </div>
+      <div class="contact-box">
+        <div class="message-box">
+          <div class="mb-3">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+          </div>
+        </div>
+          <div class="input-box">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Name" aria-label="First name">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Phone Number" aria-label="Last name">
+            </div>
+            <div class="col">
+              <input type="email" class="form-control" placeholder="Email" aria-label="First name">
+            </div>
+          </div>
+      </div>
+  </section>
+
+  <footer>
+    <div class="container">
+       <div class="footer-box">
+         <ul class="links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Properties</a></li>
+          <li><a href="#">MLS Search</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="social-links">
+          <li class="social-link"><a href="#"><img src="/Images/facebook-app-symbol.svg" alt="facebook"></a></li>
+          <li class="social-link"><a href="#"><img src="/Images/instagram.svg" alt="facebook"></a></li>
+          <li class="social-link"><a href="#"><img src="/Images/twitter.svg" alt="facebook"></a></li>
+        </ul>
+       </div>
+    </div>
+  </footer>
+
+
+   
+
    
 
        
 
-    
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
